Fixed vertical overflow problem

--- a/css/particles.css
+++ b/css/particles.css
@@ -3,7 +3,7 @@
 #particles {
     position: absolute;
     z-index: -1;
-    height: 100vh;
+    height: 90vh;
     width: 100%;
 }
 
